Move reset zoom button to bottom-left to avoid artist sidebar overlap

--- a/my-app/src/styles/galaxy.css
+++ b/my-app/src/styles/galaxy.css
@@ -28,7 +28,7 @@
 .reset-zoom-button {
   position: absolute;
   bottom: 20px;
-  right: 20px;
+  left: 20px;
   z-index: 20;
   display: flex;
   align-items: center;
@@ -58,7 +58,7 @@
 @media (max-width: 480px) {
   .reset-zoom-button {
     bottom: 16px;
-    right: 16px;
+    left: 16px;
     width: 36px;
     height: 36px;
   }
